Added partails in the main homeEJS file

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <!--This is used to add partials created by underscore naming  -->
+    <%- include('_header.ejs') %> 
+
     <h1 style="color: grey;"> HOME page rendered by ejs </h1>
     
+    <%- include('_footer') %> 
 </body>
 </html>
