--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<link rel="stylesheet" href="/css/home.css" >
     <!--This is used to add partials created by underscore naming  -->
    
 
-    <h1 style="color: grey;"> HOME page rendered by ejs </h1>
-    
-    
-</body>
-</html>
+    <h1 id="homeHead"> HOME page rendered by ejs </h1>
+ 
