--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/layout.css" >
     <title>Document</title>
 </head>
 <body>
 
-    <h1>This is the page Show by the use of Layouts and partials</h1>
+    <h1 id="LayoutHead">This is the page Show by the use of Layouts and partials</h1>
     <%- include('_header') %>
     
     <%- body %>
