setup and render the sign-up and sign-in page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,4 +3,13 @@
    
 
     <h1 id="homeHead"> HOME page rendered by ejs </h1>
+    <ul>
+        <li>
+            <a href="/users/sign-up">Sign Up</a>
+        </li>
+
+        <li>
+            <a href="/users/sign-in">Sign In</a>
+        </li>
+    </ul>
  
