--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -9,12 +9,12 @@
 <body>
     <h1>SIGN UP</h1>
     <form action="/users/create"  method="POST">
-    <input type="text" name="name" id="name" placeholder="Name" required>
-    <input type="email" name="email" id="email" placeholder="xyz@email.com" required>
-    <input type="password" name="password" id="password" placeholder="password" required>
-    <input type="password" name="password" id="c_pass" placeholder="confirm password" required>
-    <button type="submit">Sign Up</button>
-</form>
+        <input type="text" name="name" id="name" placeholder="Name" required>
+        <input type="email" name="email" id="email" placeholder="xyz@email.com" required>
+        <input type="password" name="password" id="password" placeholder="password" required>
+        <input type="password" name="c_password" id="c_pass" placeholder="confirm password" required>
+        <button type="submit">Sign Up</button>
+    </form>
     
 </body>
 </html>
