--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,5 +11,9 @@
         <li>
             <a href="/users/sign-in">Sign In</a>
         </li>
+
+        <li>
+            <a href="/users/sign-out">Sign Out</a>
+        </li>
     </ul>
  
