--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,16 +4,26 @@
 
     <h1 id="homeHead"> HOME page rendered by ejs </h1>
     <ul>
-        <li>
-            <a href="/users/sign-up">Sign Up</a>
-        </li>
 
-        <li>
-            <a href="/users/sign-in">Sign In</a>
-        </li>
+        <% if(locals.user) {  %>
+            <li>
+                <a href="/users/profile"><%= user.name %></a>
+            </li>
 
-        <li>
-            <a href="/users/sign-out">Sign Out</a>
-        </li>
+            <li>
+                <a href="/users/sign-out">Sign Out</a>
+            </li>
+            
+        <% } else {  %>
+            <li>
+                <a href="/users/sign-up">Sign Up</a>
+            </li>
+
+            <li>
+                <a href="/users/sign-in">Sign In</a>
+            </li>
+            
+        <% } %> 
+        
     </ul>
  
