Sass setup completed

--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,1 +1,2 @@
-<h2>This  is the <i>footer</i> section from the partials file</h2>
+<link rel="stylesheet"  href="/css/footer.css">
+<h2>All copyrights @ reserved by the SABIR ANSARI</h2>
