--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,28 +2,6 @@
     <!--This is used to add partials created by underscore naming  -->
    
 
-    <h1 id="homeHead"> HOME page rendered by ejs </h1>
-    <ul>
-
-        <% if(locals.user) {  %>
-            <li>
-                <a href="/users/profile"><%= user.name %></a>
-            </li>
-
-            <li>
-                <a href="/users/sign-out">Sign Out</a>
-            </li>
-            
-        <% } else {  %>
-            <li>
-                <a href="/users/sign-up">Sign Up</a>
-            </li>
-
-            <li>
-                <a href="/users/sign-in">Sign In</a>
-            </li>
-            
-        <% } %> 
-        
-    </ul>
+    <h1 id="homeHead">Codial / Home</h1>
+    
  
