--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,8 +1,5 @@
-#homeHead{
-    color: rgb(99, 127, 127);
-    font-family: sans-serif;
-    text-shadow: 1px 1px 5px 10px lightgrey;
-    font-size: 2.3rem;
-  
-    
-}
+#homeHead {
+  color: #637f7f;
+  font-family: sans-serif;
+  text-shadow: 1px 1px 5px 10px lightgrey;
+  font-size: 2.3rem; }
