--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,1 +1,23 @@
-<h1>This  is the header section from the partials file</h1>
+<link rel="stylesheet" href="/css/header.css" >
+
+<div>
+    <h1 id="header">Codial</h1>
+
+    <ul>
+        <% if(locals.user) {  %>
+            <li>
+                <a href="/users/profile"><%= user.name %></a>
+            </li>
+            <li>
+                <a href="/users/sign-out">Sign Out</a>
+            </li>
+        <% } else {  %>
+            <li>
+                <a href="/users/sign-up">Sign Up</a>
+            </li>
+            <li>
+                <a href="/users/sign-in">Sign In</a>
+            </li>
+        <% } %> 
+    </ul>
+</div>
