--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,3 +3,21 @@
   font-family: sans-serif;
   text-shadow: 1px 1px 5px 10px lightgrey;
   font-size: 2.3rem; }
+
+body {
+  margin: 10px; }
+
+#post-container .post {
+  margin-left: 10px;
+  padding: 20px 10px;
+  border: 1px solid grey;
+  width: 350px;
+  border-radius: 10px;
+  margin-top: 20px;
+  min-height: 100px; }
+  #post-container .post h3, #post-container .post p {
+    margin: 5px 15px;
+    font-family: sans-serif;
+    font-weight: bolder; }
+  #post-container .post p {
+    color: lightblue; }
