--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,11 +7,27 @@
         <% if( locals.user ){ %>
             
             <form action="/posts/create" method="POST">
-                <textarea name="content" cols="30" rows="10" placeholder="write a post..."></textarea>
+                <textarea name="content" cols="50" rows="10" placeholder="write a post..."></textarea>
                 <input type="submit" value="Post">
             </form>
             
         <% } %> 
+    </section>
+
+    <section id="post-container">
+        <% for(post of posts) { %>
+            
+            <div class="post" >
+                <h3>
+                    <%= post.content %> 
+                </h3>
+                <p>
+                    <%= post.user.name  %> 
+                </p>
+            </div>
+            
+        <% } %> 
+
     </section>
     
  
