--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,7 +33,7 @@
 
                 <div  class="post-comments"> 
                     <% if(locals.user) { %>
-                        <form action="/comments/create" methode="POST">
+                        <form action="/comments/create" method="POST">
                             <input type="text" name="content" placeholder="type comments..">
                             <input type="hidden" name="post" value="<% post._id %>">
                             <input type="submit" value="Add Comments">
