--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
                     <% if(locals.user) { %>
                         <form action="/comments/create" method="POST">
                             <input type="text" name="content" placeholder="type comments..">
-                            <input type="hidden" name="post" value="<% post._id %>">
+                            <input type="hidden" name="post" value="<%= post._id %>">
                             <input type="submit" value="Add Comments">
                         </form>
                         <%} %> 
