--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,68 +3,61 @@
 
 <h1 id="homeHead">Codial / Home</h1>
 <section>
-  <% if( locals.user ){ %>
+    <% if( locals.user ){ %>
 
-  <form action="/posts/create" method="POST">
-    <textarea
-      name="content"
-      cols="50"
-      rows="10"
-      placeholder="write a post..."
-    ></textarea>
-    <input type="submit" value="Post" />
-  </form>
+        <form action="/posts/create" method="POST">
+            <textarea name="content" cols="50" rows="10" placeholder="write a post..."></textarea>
+            <input type="submit" value="Post" />
+        </form>
 
-  <% } %>
+        <% } %>
 </section>
 
 <section id="post-container">
-  <% for(post of posts) { %>
-  <div class="post">
-    <% if(locals.user && locals.user.id==post.user.id) {%>
-    <span>
-      <a class="delete-post-btn" href="/posts/destroy/<%= post._id %>">X</a>
-    </span>
-    <% } %>
-    <h3><%= post.content %></h3>
-    <p><%= post.user.name %></p>
+    <% for(post of posts) { %>
+        <div class="post">
+            <% if(locals.user && locals.user.id==post.user.id) {%>
+                <span>
+                    <a class="delete-post-btn" href="/posts/destroy/<%= post._id %>">X</a>
+                </span>
+                <% } %>
+                    <h3>
+                        <%= post.content %>
+                    </h3>
+                    <p>
+                        <%= post.user.name %>
+                    </p>
 
-    <div class="post-comments">
-      <% if(locals.user) { %>
-      <form action="/comments/create" method="POST">
-        <input
-          type="text"
-          name="content"
-          placeholder="type comments.."
-          required
-        />
-        <input type="hidden" name="post" value="<%= post._id %>" />
-        <input type="submit" value="Add Comments" />
-      </form>
-      <%} %>
+                    <div class="post-comments">
+                        <% if(locals.user) { %>
+                            <form action="/comments/create" method="POST">
+                                <input type="text" name="content" placeholder="type comments.." required />
+                                <input type="hidden" name="post" value="<%= post._id %>" />
+                                <input type="submit" value="Add Comments" />
+                            </form>
+                            <%} %>
 
-      <div class="post-comments-list">
-        <ul id="post-comments-<%=post._id  %> ">
-          <% for(comment of post.comments) {%> <% if(locals.user &&
-          locals.user.id==comment.user.id) {%>
-          <span>
-            <a
-              class="delete-post-btn"
-              href="/comments/destroy/<%= comment._id %>"
-              >X</a
-            >
-          </span>
-          <% } %>
-          <p>
-            <%= comment.content %>
-            <br />
-            <small> <%=comment.user.name %> </small>
-          </p>
-          <%} %>
-        </ul>
-      </div>
-    </div>
-  </div>
+                                <div class="post-comments-list">
+                                    <ul id="post-comments-<%=post._id  %> ">
+                                        <% for(comment of post.comments) {%>
+                                            <% if(locals.user && locals.user.id==comment.user.id) {%>
+                                                <span>
+                                                    <a class="delete-post-btn"
+                                                        href="/comments/destroy/<%= comment._id %>">X</a>
+                                                </span>
+                                                <% } %>
+                                                    <p>
+                                                        <%= comment.content %>
+                                                            <br />
+                                                            <small>
+                                                                <%=comment.user.name %>
+                                                            </small>
+                                                    </p>
+                                                    <%} %>
+                                    </ul>
+                                </div>
+                    </div>
+        </div>
 
-  <% } %>
+        <% } %>
 </section>
