display users friends

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,9 +10,8 @@
 </head>
 <body>
   
-    <h1>This is the profile page of users </h1>
-    <h3>Name : <%= name %> </h3>
-    <h3>Location : <%= location %> </h3>
+    <p><%=all_users.name %> </p>
+    <p> <%= all_users.email  %> </p>
     
 </body>
 </html>
