--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,3 +61,12 @@
 
         <% } %>
 </section>
+
+<section id="users-friends">
+    <h4>Friends</h4>
+
+    <% for(u of all_users) {%>
+        <p><a href="/users/profile/<%= u.id %> "><%=u.name %> </a></p>
+         <% }%> 
+
+</section>
