--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,9 +9,24 @@
     </title>
 </head>
 <body>
+
+
+ <% if(user.id==profile_user.id){ %> 
+    <form action="/users/update/<%= profile_user.id %>  " method="post">
+    <input type="text" name="name" placeholder="your name" value="<%=profile_user.name  %> " required>
+    <input type="email" name="email" placeholder="your email" value="<%=profile_user.email  %> " required>
+    <input type="submit" value="Update">
+    </form>
+
+   
+
+   <% }else {%> 
+    
+    <p><%=profile_user.name %> </p>
+    <p> <%= profile_user.email  %> </p>
+
+    <%  }%> 
   
-    <p><%=all_users.name %> </p>
-    <p> <%= all_users.email  %> </p>
     
 </body>
 </html>
