--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style type="text/css">
+        #profileForm > input{
+            display: block;
+            margin: auto;
+            width: 200px;
+        }
+
+        #file{
+            height: 200px;
+            border: 1px solid lightgrey;
+            width: 200px;
+        }
+
+        
+
+
+    </style>
     <title>
         <%= title %> 
     </title>
@@ -12,10 +29,13 @@
 
 
  <% if(user.id==profile_user.id){ %> 
-    <form action="/users/update/<%= profile_user.id %>  " method="post">
-    <input type="text" name="name" placeholder="your name" value="<%=profile_user.name  %> " required>
-    <input type="email" name="email" placeholder="your email" value="<%=profile_user.email  %> " required>
-    <input type="submit" value="Update">
+    <!-- if user matches then show the form  -->
+    <form id="profileForm"  action="/users/update/<%= profile_user.id %>" method="post" enctype="multipart/form-data">
+        <input id="file" type="file" name="avatar" placeholder="profile Picture">
+        <input id="name" type="text" name="name" placeholder="your name" value="<%=profile_user.name  %> " required>
+        <input type="email" name="email" placeholder="your email" value="<%=profile_user.email  %> " required>
+        
+        <input type="submit" value="Update">
     </form>
 
    
